--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -157,6 +157,19 @@
         android:textColor="#80000000"
         android:textColorHint="#80000000"
         android:textSize="24dp" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/donebtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/orderspecialrec"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/btn_background"
+        android:text="কাজটি সম্পন্ন হয়েছে" />
+
 
 
 
