--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -11,12 +11,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/upperpic"
-        android:layout_width="wrap_content"
-        android:layout_height="147dp"
-        android:layout_marginTop="-1dp"
-        android:src="@drawable/product_background" />
+        <ImageView
+            android:id="@+id/upperpic"
+            android:layout_width="wrap_content"
+            android:layout_height="147dp"
+            android:layout_marginTop="-10dp"
+            android:src="@drawable/product_background" />
 
 
         <ImageView
@@ -181,16 +181,276 @@
             android:textColor="#B3000000"
             android:textColorHint="#80000000" />
 
+        <LinearLayout
+            android:id="@+id/avg_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/opinionpdetail"
+            android:layout_centerHorizontal="true">
+
+
+            <TextView
+                        android:id="@+id/avg_rating_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="4.5"
+                        android:textColor="@color/text"
+                        android:textSize="30sp" />
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_baseline_star_24"
+                android:layout_margin="5dp"
+                app:tint="@color/black" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/rating_outof"
+            android:layout_below="@+id/avg_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="27 ratings"
+            android:textColor="@color/text"
+            android:textSize="16dp"
+            android:textStyle="italic" />
+
+
+        <LinearLayout
+            android:id="@+id/rating_identifier"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/rating_outof"
+            android:orientation="vertical"
+            android:layout_marginStart="120dp">
+
+
+            <TextView
+                android:id="@+id/num1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="5"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/num2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="4"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+            <TextView
+                android:id="@+id/num3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="3"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+            <TextView
+                android:id="@+id/num4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="2"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+            <TextView
+                android:id="@+id/num5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="1"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/bars"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rating_outof"
+            android:layout_centerHorizontal="true"
+            android:layout_toRightOf="@id/rating_identifier"
+            android:orientation="vertical">
+
+            <ProgressBar
+                android:id="@+id/bar1"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:max="100"
+                android:progress="50"
+                android:progressTint="@color/five" />
+
+            <ProgressBar
+                android:id="@+id/bar2"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:max="100"
+                android:progress="50"
+                android:progressTint="@color/four" />
+
+            <ProgressBar
+                android:id="@+id/bar3"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:max="100"
+                android:progress="50"
+                android:progressTint="@color/three" />
+
+            <ProgressBar
+                android:id="@+id/bar4"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:max="100"
+                android:progress="50"
+                android:progressTint="@color/two" />
+
+            <ProgressBar
+                android:id="@+id/bar5"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:max="100"
+                android:progress="50"
+                android:progressTint="@color/one" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/population"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rating_outof"
+            android:orientation="vertical"
+            android:layout_toRightOf="@+id/bars">
+
+
+            <TextView
+                android:id="@+id/pop1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="18"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/pop2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="10"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+            <TextView
+                android:id="@+id/pop3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="30"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+            <TextView
+                android:id="@+id/pop4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="20"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+            <TextView
+                android:id="@+id/pop5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:text="56"
+                android:textColor="@color/text"
+                android:textSize="13sp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/rate_now_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/bars"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:src="@drawable/ic_baseline_star_24"
+                app:tint="@color/texthint" />
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:src="@drawable/ic_baseline_star_24"
+                app:tint="@color/texthint" />
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:src="@drawable/ic_baseline_star_24"
+                app:tint="@color/texthint" />
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:src="@drawable/ic_baseline_star_24"
+                app:tint="@color/texthint" />
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:src="@drawable/ic_baseline_star_24"
+                app:tint="@color/texthint" />
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/yourrating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rate_now_container"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="5dp"
+            android:text="রেটিং দিন"
+            android:textColor="@color/text" />
+
         <TextView
             android:id="@+id/wantorder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/opinionpdetail"
+            android:layout_below="@+id/yourrating"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
             android:text="আপনি কি অর্ডার করতে ইচ্ছুক?"
             android:textColor="#B3000000" />
+
 
 
 </RelativeLayout>
