--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -18,6 +18,14 @@
             android:layout_marginTop="-10dp"
             android:src="@drawable/product_background" />
 
+        <ImageView
+            android:id="@+id/wishlist"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/upperpic"
+            android:layout_alignParentRight="true"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_baseline_favorite_24"/>
 
         <ImageView
             android:id="@+id/imageforpdetail"
@@ -208,11 +216,11 @@
 
         <TextView
             android:id="@+id/rating_outof"
-            android:layout_below="@+id/avg_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/avg_rating"
             android:layout_centerHorizontal="true"
-            android:text="27 ratings"
+            android:text=""
             android:textColor="@color/text"
             android:textSize="16dp"
             android:textStyle="italic" />
@@ -280,7 +288,7 @@
             android:orientation="vertical">
 
             <ProgressBar
-                android:id="@+id/bar1"
+                android:id="@+id/bar5"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -291,7 +299,7 @@
                 android:progressTint="@color/five" />
 
             <ProgressBar
-                android:id="@+id/bar2"
+                android:id="@+id/bar4"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -313,7 +321,7 @@
                 android:progressTint="@color/three" />
 
             <ProgressBar
-                android:id="@+id/bar4"
+                android:id="@+id/bar2"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -324,7 +332,7 @@
                 android:progressTint="@color/two" />
 
             <ProgressBar
-                android:id="@+id/bar5"
+                android:id="@+id/bar1"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -347,7 +355,7 @@
 
 
             <TextView
-                android:id="@+id/pop1"
+                android:id="@+id/pop5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
@@ -356,7 +364,7 @@
                 android:textSize="13sp" />
 
             <TextView
-                android:id="@+id/pop2"
+                android:id="@+id/pop4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
@@ -372,7 +380,7 @@
                 android:textColor="@color/text"
                 android:textSize="13sp" />
             <TextView
-                android:id="@+id/pop4"
+                android:id="@+id/pop2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
@@ -380,7 +388,7 @@
                 android:textColor="@color/text"
                 android:textSize="13sp" />
             <TextView
-                android:id="@+id/pop5"
+                android:id="@+id/pop1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
