--- a/app/src/main/res/layout/activity_registration_new.xml
+++ b/app/src/main/res/layout/activity_registration_new.xml
@@ -16,7 +16,8 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/undraw_fingerprint_re_uf3f"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/undraw_fingerprint_re_uf3f" />
 
         <TextView
             android:id="@+id/createdialog"
